--- a/src/pages/mainPage/mainPageTable.scss
+++ b/src/pages/mainPage/mainPageTable.scss
@@ -6,6 +6,7 @@
   margin: 10px auto;
   margin-bottom: 20px;
   direction: rtl;
+
   .table {
     @include themify($themes) {
       margin-top: 10px;
@@ -31,6 +32,22 @@
           }
         }
       }
+
+      .MuiTableBody-root {
+        td {
+          color: themed("textColor") !important;
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 19px;
+          text-align: center;
+          border-left: 1px solid #2c7be5 !important;
+          &:last-child {
+            border-left: 0 !important;
+          }
+        }
+      }
       // .css-18fu35v-MuiTableRow-root {
       //   td {
       //     border-left: 1px solid #2c7be5;
@@ -39,33 +56,25 @@
       //     }
       //   }
       // }
-      .MuiTableBody-root {
-        td {
-          border-left: 1px solid #2c7be5 !important;
-          &:last-child {
-            border-left: 0 !important;
-          }
-        }
-      }
 
-      .MuiTableBody-root {
-        .css-120ze2a-MuiTableCell-root,
-        .css-18fu35v-MuiTableRow-root,
-        .css-1exc4ya-MuiTableCell-root {
-          color: themed("textColor");
-          font-family: "Cairo";
-          font-style: normal;
-          font-weight: 600;
-          font-size: 14px;
-          line-height: 19px;
-          text-align: center;
-          // border-left: 1px solid #2c7be5;
-          padding: 6px 10px;
-          &:last-child {
-            border-left: 0 !important;
-          }
-        }
-      }
+      // .MuiTableBody-root {
+      //   .css-120ze2a-MuiTableCell-root,
+      //   .css-18fu35v-MuiTableRow-root,
+      //   .css-1exc4ya-MuiTableCell-root {
+      //     color: themed("textColor");
+      //     font-family: "Cairo";
+      //     font-style: normal;
+      //     font-weight: 600;
+      //     font-size: 14px;
+      //     line-height: 19px;
+      //     text-align: center;
+      //     // border-left: 1px solid #2c7be5;
+      //     padding: 6px 10px;
+      //     &:last-child {
+      //       border-left: 0 !important;
+      //     }
+      //   }
+      // }
     }
   }
 }
