--- a/src/pages/orderDetailsPage/orderDetailsTable.scss
+++ b/src/pages/orderDetailsPage/orderDetailsTable.scss
@@ -18,7 +18,7 @@
       padding-right: 12px;
       justify-content: start;
     }
-    .css-levciy-MuiTablePagination-displayedRows{
+    .css-levciy-MuiTablePagination-displayedRows {
       direction: ltr;
     }
 
@@ -44,10 +44,11 @@
         text-align: center;
       }
     }
-
+    
     .MuiTableBody-root {
-      .css-pnm1b2-MuiTableCell-root,
-      .css-10gy0os-MuiTableCell-root {
+      td,
+      tr,
+      th {
         color: themed("textColor");
         text-align: right;
         font-family: "Cairo";
@@ -57,7 +58,25 @@
         line-height: 19px;
         text-align: center;
         padding: 6px 10px;
+        &:last-child {
+          border-left: 0 !important;
+        }
       }
     }
+
+    // .MuiTableBody-root {
+    //   .css-pnm1b2-MuiTableCell-root,
+    //   .css-10gy0os-MuiTableCell-root {
+    //     color: themed("textColor");
+    //     text-align: right;
+    //     font-family: "Cairo";
+    //     font-style: normal;
+    //     font-weight: 600;
+    //     font-size: 12px;
+    //     line-height: 19px;
+    //     text-align: center;
+    //     padding: 6px 10px;
+    //   }
+    // }
   }
 }
