--- a/src/pages/settingsPage/settingsPage.scss
+++ b/src/pages/settingsPage/settingsPage.scss
@@ -73,22 +73,30 @@
       flex-direction: column;
       direction: rtl;
       width: 85%;
-      .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
+
+      .MuiInputBase-input {
         color: themed("blackGray");
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 600;
-        font-size: 16px;
-        height: 40px;
-        padding: 13px 14px;
         &::placeholder {
-          font-family: "Cairo";
-          font-style: normal;
-          font-weight: 600;
-          font-size: 16px;
           color: themed("textColor");
         }
       }
+
+      // .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
+      //   color: themed("blackGray");
+      //   font-family: "Cairo";
+      //   font-style: normal;
+      //   font-weight: 600;
+      //   font-size: 16px;
+      //   height: 40px;
+      //   padding: 13px 14px;
+      //   &::placeholder {
+      //     font-family: "Cairo";
+      //     font-style: normal;
+      //     font-weight: 600;
+      //     font-size: 16px;
+      //     color: themed("textColor");
+      //   }
+      // }
 
       .input fieldset {
         // height: 40px;
