--- a/src/features/notifications/notificatioComp/notification.scss
+++ b/src/features/notifications/notificatioComp/notification.scss
@@ -7,7 +7,8 @@
     margin: 8px 5px;
     background: themed("bgSoft");
     border-radius: 10px;
-    height: 100px;
+    height: max-content;
+    padding: 5px 0px;
     .notifcation-img {
       border-radius: 10px;
       overflow: hidden;
@@ -21,15 +22,21 @@
 
     .description-container {
       display: grid;
-      grid-template-columns: 85% 15%;
+      grid-template-columns: 80% 15%;
       text-align: right;
       gap: 10px;
       align-items: center;
-      max-height: 100px;
-      max-width: 100%;
-      overflow: hidden;
+      // max-height: 100px;
+      height: max-content;
+      // max-width: 100%;
+      // overflow: hidden;
 
       .description {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: flex-start;
+        width: 100%;
         color: themed("textColor");
         font-family: "Cairo";
         font-style: normal;
@@ -41,10 +48,14 @@
           text-align: right;
         }
         p {
+          width: 100%;
+          height: max-content;
+          // white-space: nowrap;
           font-weight: 300;
           font-size: 16px;
           line-height: 30px;
           text-align: right;
+          padding-bottom: 5px;
         }
       }
 
