--- a/src/features/swipers/mainSwiper/mainSwiper.scss
+++ b/src/features/swipers/mainSwiper/mainSwiper.scss
@@ -17,7 +17,10 @@
   //   height: 5px !important;
   //   border-radius: 1px;
   // }
-
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: none;
+  }
   .swiper {
     width: 100%;
     max-height: 351px;
