--- a/src/features/cart/cartComp/cartListItem.scss
+++ b/src/features/cart/cartComp/cartListItem.scss
@@ -4,11 +4,12 @@
   @include themify($themes) {
     background: themed("bgSoft");
     width: 95%;
-    height: 97px;
+    min-height: 97px;
+    height: max-content;
     border-radius: 10px;
     margin: 13px auto;
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 15% 85%;
 
     .delete-icon {
       display: flex;
@@ -20,30 +21,43 @@
     .single-product {
       display: flex;
       flex-direction: row;
-      align-items: center;
+      align-items: flex-start;
       justify-content: flex-end;
       padding-top: 10px;
       padding-right: 22px;
       margin-bottom: 10px;
       gap: 10px;
       width: 100%;
-
+      @include mobile {
+        padding-right: 12px;
+      }
       .product-title {
         color: themed("textColor");
         text-align: right;
         font-family: "Cairo";
         font-style: normal;
         width: 60%;
+        height: max-content;
+
         .title {
+          width: 100%;
+          height: max-content;
           font-weight: 500;
-          font-size: 16px;
+          font-size: 18px;
           line-height: 30px;
+          @include mobile {
+            font-size: 16px;
+          }
         }
         p {
+          height: max-content;
           font-weight: 500;
           font-size: 20px;
           line-height: 41px;
           direction: rtl;
+          @include mobile {
+            font-size: 18px;
+          }
         }
       }
 
@@ -51,6 +65,11 @@
         width: 25%;
         height: 66px;
         //   border-radius: 10px;
+        @include mobile {
+          margin-top: 10px;
+          width: 28%;
+          height: 76px;
+        }
         img {
           width: 100%;
           height: 100%;
@@ -65,6 +84,9 @@
         flex-direction: column;
         align-items: center;
         max-width: 38px;
+        @include mobile {
+          margin-top: 10px;
+        }
 
         .remove-icon {
           color: #b8b8b8;
@@ -97,7 +119,7 @@
 /* ____ MEDIA QUERIES (MEDIUM DEVICES) ________ */
 @media screen and (min-width: 600px) {
   .CartListItem-container {
-    height: 130px;
+    min-height: 130px;
 
     .delete-icon {
       .dicon {
@@ -107,15 +129,15 @@
 
     .single-product {
       .product-title {
-        h4 {
-          font-weight: 500;
-          font-size: 22px;
-          line-height: 40px;
+        .title {
+          font-size: 14px;
+          line-height: 30px;
         }
-        span {
+        p {
           font-weight: 500;
-          font-size: 26px;
+          font-size: 18px;
           line-height: 41px;
+          direction: rtl;
         }
       }
 
