--- a/src/features/products/mostSaledProduct/mostSaledProduct.scss
+++ b/src/features/products/mostSaledProduct/mostSaledProduct.scss
@@ -86,8 +86,9 @@
           height: 40px;
         }
         @include mobile {
-          width: 27px;
+          width: 30px;
           height: 27px;
+          margin-left: 4px;
         }
         .icon {
           font-size: 45px;
@@ -100,19 +101,22 @@
             font-size: 22px;
           }
         }
-        span {
-          font-weight: 500;
-          font-size: 20px;
-          line-height: 19px;
-          @include tablet {
-            font-size: 16px;
-          }
-          @include mobile {
-            font-size: 15px;
-          }
-        }
       }
 
+      p {
+        width: 100%;
+        // height: 100%;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 19px;
+        text-align: start;
+        @include tablet {
+          font-size: 16px;
+        }
+        @include mobile {
+          font-size: 15px;
+        }
+      }
       // span {
       //   padding-top: 8px;
       //   font-weight: 500;
