--- a/src/features/products/productList/productList.scss
+++ b/src/features/products/productList/productList.scss
@@ -20,6 +20,7 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 10px;
+    direction: rtl;
 
     // .card {
     //   background: var(--color-white);
